--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,11 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+NIUBIZ_URL_API=https://apisandbox.vnforappstest.com
+NIUBIZ_URL_JS=https://static-content-qas.vnforapps.com/v2/js/checkout.js?qa=true
+NIUBIZ_USER=integraciones@niubiz.com.pe
+NIUBIZ_PASSWORD=_7z3@8fF
+NIUBIZ_MERCHANT_ID=456879852
+NIUBIZ_CURRENCY=PEN
